--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="col-md-4">
                 <div class="area bg-info">
-                    <h5 >WithDraw</h5>
-                <p>$ <span>00</span></p>
+                <h5 >WithDraw</h5>
+                <p>$ <span id='withDrawAmount'>00</span></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -44,9 +44,9 @@
             <div class="col-md-6">
                 <div class="area shadow">
                     <h4>WithDraw</h4>
-                <input type="text" class='form-control'>
+                <input id="withDrawCurrency" type="text" class='form-control'>
                 <br>
-                <button class='btn btn-success'>WithDraw</button>
+                <button id='withDrawBtn' class='btn btn-success'>WithDraw</button>
                 </div>
             </div>
         </div>
